--- a/M4PL/M4PL.Apln/M4PL.Apln/Content/Organisation.css
+++ b/M4PL/M4PL.Apln/M4PL.Apln/Content/Organisation.css
@@ -1,5 +1,5 @@
 ﻿    #splOverview_1{
-    height:1080px !important;
+    height:1300px !important;
 }
 /*Organisation Create*/
 
