--- a/M4PL/M4PL.Apln/M4PL.Apln/Content/Ribbon.css
+++ b/M4PL/M4PL.Apln/M4PL.Apln/Content/Ribbon.css
@@ -1,4 +1,5 @@
-﻿ .dxmLite_Office2010Black .dxm-main .dxm-hovered {
+﻿<style>
+    .dxmLite_Office2010Black .dxm-main .dxm-hovered {
         background: none;
         border: none;
     }
@@ -102,3 +103,4 @@
         background: none;
         border: none;
     }
+</style>
